# OS-5sem-labs

./: README.md  main.c
lab-1/: a.out
lab-2/: Point.h  log  main.cpp
lab-3/: CMakeLists.txt  adress_spaces.c  adress_spaces.h  load_test.c  load_test.h  main.c  mmemory.c  mmemory.h  segment_table.c  segment_table.h  unit_test.c  unit_test.h
